[tool.poetry]
name = "test-virtualenv"
version = "0.0.1"
description = ""
authors = ["Douwe van der Meij <douwe@karibu-online.nl>"]
exclude = []

[tool.poetry.dependencies]
python = "~3.12"
python-dotenv = "*"
fractal-toolkit = "*"
pydantic = "*"
fastapi = "*"
uvicorn = "*"
firebase-admin = "*"
httpx = "*"
sentry-sdk = {version = "*", extras = ["fastapi"]}
python-jose = {version = "*", extras = ["cryptography"]}
python-multipart = "*"
google-cloud-pubsub = "*"
google-cloud-secret-manager = "*"
jinja2 = "*"
requests = "*"
python-dateutil = "*"
jwcrypto = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-sugar = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
